src/test/deca/context/valid/created/decl_var/declaration2.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
//  Resultats:
//  OK
//
// Historique:
//    cree le 09/01/2020

{

    int x = 0;
    float y = 1.0;
    boolean b = true;


}
